# drone-defence-system

./: .env.example  .gitignore  API_REFERENCE.md  Dockerfile.backend  Dockerfile.frontend  GITHUB_PAGES_SETUP.md  LICENSE  README.md  WEB_SETUP.md  WEB_SUMMARY.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: app.py  requirements.txt
config/: perception_config.yaml  sim_config.yaml  swarm_config.yaml
docs/: README.md  _config.yml  index.html
frontend/: index.html
simulation/: __init__.py  drone_sim.py  visualizer.py  world.py
simulation/scenarios/: __init__.py
src/: __init__.py
src/action/: __init__.py
src/communication/: __init__.py
src/core/: __init__.py  constants.py  events.py  types.py
src/drone_defence/: __init__.py  defence_system.py  drone.py  interceptor.py  main.py  radar.py
src/energy/: __init__.py
src/feedback/: __init__.py
src/intelligence/: __init__.py  boids.py  collision.py  path_planner.py  task_planner.py
src/perception/: __init__.py
tests/: test_boids.py  test_drone_defence.py  test_integration.py  test_task_planner.py
tools/: run_sim.py
